--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,103 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+
+
 body {
-    position: relative;
-    background-color: #bd79f5;
+    height: 300px;
+    width: 300px;
+    background-color: #c38bf0;
 }
 
-.container {
-    background-color: #FFFFFF;
-    width: 70%;
+.container{
+    width: 270px;
+    height: 290px;
+    background-color: rgb(208, 232, 253);
     position: absolute;
+    transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 50px 30px;
+    padding: 15px;
     border-radius: 10px;
     box-shadow: 0 20px 40px rgba(38,33,61,0.2);
 }
 
-
-.searchBar{
+.search-box{
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.searchBar input{
-    padding: 10px;
+.word{
+    padding: 5px;
     width: 70%;
     border: none;
-    border-bottom: 1px solid;
-    font-size: medium;
-    font-weight: bold;
     outline: none;
+    border-bottom: 1px solid black;
+    font-size: 16px;
 }
 
-.button{
-    padding: 20px 25px;
+.searchButton {
+    padding: 15px 0px;
+    width: 25%;
+    background-color: #d6a6fd;
     border: none;
-    border-radius: 15px;
-    background-color: rgb(245, 156, 245);
-    color: #FFFFFF;
+    outline: none;
+    color: #ffffff;
+    border-radius: 5px;
     font-weight: bold;
 }
 
-.button:hover{
-    background-color: rgb(202, 126, 247);
+.searchButton:hover {
+    background-color: red;
 }
 
-.button:active{
+.searchButton:active{
     transform: translateY(-5px);
 }
 
-.meaning{
-    margin-top: 30px;
-    font-size: medium;
-    color: black;
-    border-left: 5px solid #FF6666;
-    padding-left: 5px;
+.result{
+    position: relative;
 }
 
-.answer{
-    padding-left: 5px;
+.result h3{
+    font-size: 20px;
+    color: black;
+}
+
+.result .content{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.result button{
+    background-color: transparent;
+    color: #bb7eee;
+    border: none;
+    outline: none;
+    font-size: 15px;
+}
+
+.result .details{
+    display: flex;
+    gap: 5px;
+    color: black;
+    margin: 5px 0 20px 0;
+    font-size: 14px;
+}
+
+.wordMeaning{
+    color: black;
+    font-style: bolc;
+}
+
+.wordExample{
+    font-style: italic;
+    border-left: 5px solid #d6a6fd;
+    padding-left: 15px;
+    margin-top: 20px;
 }
